fixed webpage stretching too far.

--- a/style.css
+++ b/style.css
@@ -50,7 +50,7 @@ h1{
     align-items: center;
     min-height: 90vh;
     width: 100vw;
-    padding: 20px;
+    padding: 0px;
 }
 
 .hero {
